# LyROI

./: .gitignore  CITATION.cff  DISCLAIMER.md  LICENSE  MODEL_LICENSE.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish-pypi.yml
distribution/: installer.iss
lyroi/: __init__.py  devices.py  entrypoints.py  inference.py  lyroi.py  modes.py  nnunet_interface.py  utils.py
lyroi/gui/: __init__.py  components.py  loading_screen.py  main_window.py  model_manager.py  settings.py  start.py  utils.py  worker.py
scripts/: merge_delinations.py  predict.sh
