[project]
name = "lyroi"
version = "0.1.3"
description = "LyROI - nnU-Net-based Lymphoma Total Metabolic Tumor Volume Segmentation"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Pavel Nikulin", email = "p.nikulin@hzdr.de" },
    { name = "Jens Maus", email = "j.maus@hzdr.de" }
]
keywords = [
    "deep learning",
    "ai",
    "lymphoma",
    "pet",
    "petct",
    "tmtv",
    "mtv",
    "nnunet",
    "lyroi",
    "delineations",
    "segmentation",
    "cancer",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    'torch>=2.1.2',
    'numpy',
    'acvl-utils==0.2',
    'nnunetv2>=2.5.2',
    'requests',
    'nibabel',
    'packaging',
    'psutil',
    'PyQt5'
]

[project.urls]
Homepage = "https://github.com/hzdr-MedImaging/LyROI"
Documentation = "https://github.com/hzdr-MedImaging/LyROI/blob/main/README.md"
Source = "https://github.com/hzdr-MedImaging/LyROI"

[project.scripts]
lyroi = "lyroi.entrypoints:predict_entrypoint"
lyroi_install = "lyroi.entrypoints:install_model_entrypoint"
lyroi_gui = "lyroi.gui.start:main"

[build-system]
requires = ["setuptools>=67.8.0"]
build-backend = "setuptools.build_meta"
